[tool.poetry]
name = "rubix-data-push"
version = "1.0.9"
description = ""
authors = ["NubeDev <aidan@enviroservices.com.au>"]

[tool.poetry.dependencies]
python = "^3.6"
gunicorn = "^20.0.4"
click = "^7.1.2"
toml = "^0.10.2"
rubix-http = {git = "https://github.com/NubeIO/rubix-http", rev = "v1.1.1"}
rubix-registry = {git = "https://github.com/NubeIO/rubix-registry", rev = "v1.0.0"}
rubix-mqtt = {git = "https://github.com/NubeIO/rubix-mqtt", rev = "v1.2.0"}
psycopg2-binary = "^2.8.6"
gevent = "^21.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
